--- a/photographer.html
+++ b/photographer.html
@@ -1,37 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
-  </head>
-  <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
-    </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
+
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7b419fb201.js" crossorigin="anonymous"></script>
+
+  <title>Fisheye - photographe </title>
+</head>
+
+<body>
+
+  <div id="lightbox" class="lightbox">
+    <img src="assets/icons/close.svg" onclick="closeLightbox()" />
+    <div class="lightbox__content">
+      <div class="leftArrow" id="leftArrow"><i class="fa-solid fa-caret-left fa-2xl arrow"></i></div>
+      <div><img id="lightboxMedia" src="" alt="" style="width: 300px; height: auto;"></div>
+      <div class="rightArrow" id="rightArrow"><i class="fa-solid fa-caret-right fa-2xl arrow"></i></div>
+    </div>
+
+  </div>
+
+  <header>
+    <a href="index.html" title="“Fisheye Home page"><img src="assets/images/logo.png" class="logo"
+        alt="“Fisheye Home page" /></a>
+  </header>
+
+  <main id="main">
+    <div class="photograph-header">
+      <div>
+        <h2 id="photographerName"></h2>
+        <h3>
+          <span id="photographerCity"></span>,
+          <span id="photographerCountry"></span>
+        </h3>
+        <span id="photographerTagline"></span>
       </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
+
+      <div>
+        <button class="contact_button" aria-label="Contact Me" onclick="displayModal()">Contactez-moi</button>
+      </div>
+
+      <div>
+        <img id="photographerPicture">
+      </div>
+    </div>
+    <div class="sortBy"
+      style="display: inline-block; padding: 20px; margin: 15px 0px 0px 35px; background: #901C1C; border-radius: 5px;">
+
+      <select name="Triez par" id="" style="font-size: 18px; background: #901C1C; color: #fff; border: none;">
+        <option value="Popularité">Popularité</option>
+        <option value="Date">Date</option>
+        <option value="Titre">Titre</option>
+      </select>
+    </div>
+    <!-- test page photographe-->
+    <div class="media_page">
+    </div>
+
+    <!-- à corriger plus tard -->
+    <div class="counter"
+      style="display: block; position: fixed; bottom: -5px; right: 20px; width: auto; height: 55px; background-color: #DB8876; font-size: 24px; padding: 10px 20px; border-radius: 5px;">
+      <span id="counterLikes" style="padding-right: 15px;"> </span><i class="fa-solid fa-heart"></i>
+      <span id="counterPrice" style="padding-left: 15px;"> </span>
+    </div>
+  </main>
+  <div id="contact_modal">
+    <div class="modal">
+      <header>
+        <div>
           <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
-        </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+          <h3 id="contactName"></h3>
+        </div>
+        <img src="assets/icons/close.svg" onclick="closeModal()" />
+      </header>
+      <form>
+        <div>
+          <label for="firstname">Prénom</label>
+          <input type="text" name="firstname" id="firstname" />
+          <label for="lastname">Nom</label>
+          <input type="text" name="lastname" id="lastname" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+          <label for="message">Votre message</label>
+          <textarea name="message" id="message" cols="60" rows="10"></textarea>
+
+        </div>
+        <button class="contact_button">Envoyer</button>
+      </form>
+    </div>
+  </div>
+  <script src="scripts/factories/media.js"></script>
+  <script src="/scripts/pages/photographer.js"></script>
+  <script src="/scripts/utils/contactForm.js"></script>
+  <script src="/scripts/utils/lightbox.js"></script>
+</body>
+
 </html>
