--- a/photographer.html
+++ b/photographer.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/7b419fb201.js" crossorigin="anonymous"></script>
-
   <title>Fisheye - photographe </title>
 </head>
 
 <body>
 
+  <!-- modal - lightbox media -->
   <div id="lightbox" class="lightbox">
-    <img src="assets/icons/close.svg" onclick="closeLightbox()" />
+    <img class="lightbox_close" src="assets/icons/close.svg" alt="Close dialog" aria-label="Close dialog"
+      onclick="closeLightbox()" />
     <div class="lightbox__content">
-      <div class="leftArrow" id="leftArrow"><i class="fa-solid fa-caret-left fa-2xl arrow"></i></div>
-      <div><img id="lightboxMedia" src="" alt="" style="width: 300px; height: auto;"></div>
-      <div class="rightArrow" id="rightArrow"><i class="fa-solid fa-caret-right fa-2xl arrow"></i></div>
-    </div>
 
+      <div class="leftArrow" id="leftArrow" aria-label="Previous image"><i class="fa-solid fa-caret-left fa-2xl arrow"
+          onclick="previousMedia()"></i></div>
+
+      <div>
+        <img id="lightboxImage" src="" aria-label="image closeup view">
+        <video id="lightboxVideo" src="" aria-label="image closeup view" controls></video>
+        <span id="lightboxTitle" class="lightbox_title"></span>
+      </div>
+
+      <div class="rightArrow" id="rightArrow" aria-label="Next image"><i class="fa-solid fa-caret-right fa-2xl arrow"
+          onclick="nextMedia()"></i></div>
+
+    </div>
   </div>
 
   <header>
@@ -29,12 +39,12 @@
   </header>
 
   <main id="main">
+    <!-- header - profil page -->
     <div class="photograph-header">
       <div>
         <h2 id="photographerName"></h2>
         <h3>
-          <span id="photographerCity"></span>,
-          <span id="photographerCountry"></span>
+          <span id="photographerCity"></span>, <span id="photographerCountry"></span>
         </h3>
         <span id="photographerTagline"></span>
       </div>
@@ -44,29 +54,34 @@
       </div>
 
       <div>
-        <img id="photographerPicture">
+        <img id="photographerPicture" />
       </div>
     </div>
-    <div class="sortBy"
-      style="display: inline-block; padding: 20px; margin: 15px 0px 0px 35px; background: #901C1C; border-radius: 5px;">
 
-      <select name="Triez par" id="" style="font-size: 18px; background: #901C1C; color: #fff; border: none;">
-        <option value="Popularité">Popularité</option>
-        <option value="Date">Date</option>
-        <option value="Titre">Titre</option>
-      </select>
-    </div>
-    <!-- test page photographe-->
-    <div class="media_page">
+    <!-- sort by popularity, date & title -->
+    <div class="sortBy">
+      <div class="sortBy_title">Trier par</div>
+      <div class="sortBy_content">
+        <select onchange="sortMedia(this)" name="sortBy" aria-label="Order by">
+          <option value="Popularity">Popularité</option>
+          <option value="Date">Date</option>
+          <option value="Title">Titre</option>
+        </select>
+      </div>
     </div>
 
-    <!-- à corriger plus tard -->
-    <div class="counter"
-      style="display: block; position: fixed; bottom: -5px; right: 20px; width: auto; height: 55px; background-color: #DB8876; font-size: 24px; padding: 10px 20px; border-radius: 5px;">
-      <span id="counterLikes" style="padding-right: 15px;"> </span><i class="fa-solid fa-heart"></i>
-      <span id="counterPrice" style="padding-left: 15px;"> </span>
+    <!-- block - display photographe media -->
+    <div class="media_page"></div>
+
+    <!-- footer - number of likes & price -->
+    <div class="counter">
+      <span id="counterLikes" class="counter_likes"> </span><i class="fa-solid fa-heart"></i>
+      <span id="counterPrice" class="counter_price"> </span>
     </div>
+
   </main>
+
+  <!-- modal contact -->
   <div id="contact_modal">
     <div class="modal">
       <header>
@@ -76,7 +91,7 @@
         </div>
         <img src="assets/icons/close.svg" onclick="closeModal()" />
       </header>
-      <form>
+      <form onsubmit="inputConsoleLog(event)">
         <div>
           <label for="firstname">Prénom</label>
           <input type="text" name="firstname" id="firstname" />
@@ -86,16 +101,18 @@
           <input type="email" name="email" id="email" />
           <label for="message">Votre message</label>
           <textarea name="message" id="message" cols="60" rows="10"></textarea>
-
         </div>
-        <button class="contact_button">Envoyer</button>
+        <button class="contact_button" type="submit">Envoyer</button>
       </form>
     </div>
   </div>
+
   <script src="scripts/factories/media.js"></script>
   <script src="/scripts/pages/photographer.js"></script>
   <script src="/scripts/utils/contactForm.js"></script>
   <script src="/scripts/utils/lightbox.js"></script>
+  <script src="/scripts/utils/likeButton.js"></script>
+  <script src="/scripts/utils/sortBy.js"></script>
 </body>
 
 </html>
