--- a/photographer.html
+++ b/photographer.html
@@ -108,11 +108,11 @@
   </div>
 
   <script src="scripts/factories/media.js"></script>
-  <script src="/scripts/pages/photographer.js"></script>
-  <script src="/scripts/utils/contactForm.js"></script>
-  <script src="/scripts/utils/lightbox.js"></script>
-  <script src="/scripts/utils/likeButton.js"></script>
-  <script src="/scripts/utils/sortBy.js"></script>
+  <script src="scripts/pages/photographer.js"></script>
+  <script src="scripts/utils/contactForm.js"></script>
+  <script src="scripts/utils/lightbox.js"></script>
+  <script src="scripts/utils/likeButton.js"></script>
+  <script src="scripts/utils/sortBy.js"></script>
 </body>
 
 </html>
